--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 bevy = "0.4.0"
 derive_more = "0.99.11"
 rand = "0.8.0"
+serde = "1.0.118"
+serde_yaml = "0.8.14"
+structopt = "0.3.21"
