--- a/testfile.yml
+++ b/testfile.yml
@@ -1,8 +1,8 @@
 
 cities:
   - name: "Athens"
-    links:
-    - "Brussels"
+    links: []
+#    - "Brussels"
     market_info:
       consumption: 30
       supply: 35
@@ -11,17 +11,17 @@ cities:
         base_supply: 35
         base_price: 100
         price_per_supply: -1
-  - name: "Brussels"
-    links:
-      - "Athens"
-    market_info:
-      consumption: 25
-      supply: 20
-      production: 30
-      pricer:
-        base_supply: 35
-        base_price: 100
-        price_per_supply: -1
-    pos:
-      - 1
-      - 2
+#  - name: "Brussels"
+#    links:
+#      - "Athens"
+#    market_info:
+#      consumption: 25
+#      supply: 20
+#      production: 30
+#      pricer:
+#        base_supply: 35
+#        base_price: 100
+#        price_per_supply: -1
+#    pos:
+#      - 1
+#      - 2
