--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde = "1.0.118"
 serde_yaml = "0.8.14"
 structopt = "0.3.21"
 warp = { git = "https://github.com/seanmonstar/warp" }
+serde_json = "1.0.61"
 [dependencies.tokio]
 version = "1.0.2"
 features = ["rt"]
