--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.51",
+    "axios": "^0.21.1",
     "konva": "^7.1.3",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
@@ -22,6 +23,6 @@
   "devDependencies": {
     "@types/parcel-env": "0.0.0",
     "parcel-bundler": "^1.12.4",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.3"
   }
 }
