model updtes over network and displayed in client

--- a/testfile.yml
+++ b/testfile.yml
@@ -2,8 +2,8 @@ settings:
   loop_rate: 5000
 cities:
   - name: "Athens"
-    links: []
-#    - "Brussels"
+    links:
+      - "Brussels"
     market_info:
       consumption: 30
       supply: 35
@@ -12,17 +12,20 @@ cities:
         base_supply: 35
         base_price: 100
         price_per_supply: -1
-#  - name: "Brussels"
-#    links:
-#      - "Athens"
-#    market_info:
-#      consumption: 25
-#      supply: 20
-#      production: 30
-#      pricer:
-#        base_supply: 35
-#        base_price: 100
-#        price_per_supply: -1
-#    pos:
-#      - 1
-#      - 2
+    pos:
+      - 300
+      - 400
+  - name: "Brussels"
+    links:
+      - "Athens"
+    market_info:
+      consumption: 25
+      supply: 20
+      production: 30
+      pricer:
+        base_supply: 35
+        base_price: 100
+        price_per_supply: -1
+    pos:
+      - 200
+      - 300
