--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /target
+.DS_Store
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
