--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -20,6 +20,7 @@
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.51",
     "axios": "^0.21.1",
+    "canvas": "^2.6.1",
     "konva": "^7.1.3",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
