--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 anyhow = "1.0.36"
 bevy = "0.4.0"
 derive_more = "0.99.11"
-rand = "0.8.0"
+rand = { version = "0.8.0", features = ["small_rng"] }
 serde = "1.0.118"
 serde_yaml = "0.8.14"
 structopt = "0.3.21"
