--- a/testfile.yml
+++ b/testfile.yml
@@ -1,31 +1,35 @@
 settings:
   loop_rate: 5000
+agents:
+  - name: "Bob"
+    position: "Athens"
 cities:
   - name: "Athens"
     links:
       - "Brussels"
-    market_info:
-      consumption: 30
-      supply: 35
-      production: 25
-      pricer:
-        base_supply: 35
-        base_price: 100
-        price_per_supply: -1
-    pos:
-      - 300
-      - 400
-  - name: "Brussels"
-    links:
-      - "Athens"
-    market_info:
-      consumption: 25
-      supply: 20
-      production: 30
-      pricer:
-        base_supply: 35
-        base_price: 100
-        price_per_supply: -1
-    pos:
-      - 200
-      - 300
+    market:
+      Grain:
+        consumption: 30
+        supply: 35
+        production: 25
+        pricer:
+          base_supply: 35
+          base_price: 100
+          price_per_supply: -1
+          pos:
+            - 300
+            - 400
+#  - name: "Brussels"
+#    links:
+#      - "Athens"
+#    market_info:
+#      consumption: 25
+#      supply: 20
+#      production: 30
+#      pricer:
+#        base_supply: 35
+#        base_price: 100
+#        price_per_supply: -1
+#    pos:
+#      - 200
+#      - 300
