--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,7 +10,7 @@
   # NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
   # `brew install michaeleisel/zld/zld`
   [target.x86_64-apple-darwin]
-  rustflags = ["-C", "link-arg=-fuse-ld=/Users/jh/homebrew/bin/zld", "-Zshare-generics=y", "-Zrun-dsymutil=no"]
+  rustflags = ["-C", "link-arg=-fuse-ld=/Users/jh/homebrew/bin/zld", "-Zshare-generics=y"]
 
   [target.x86_64-pc-windows-msvc]
   linker = "rust-lld.exe"
