--- a/testfile.yml
+++ b/testfile.yml
@@ -1,36 +1,76 @@
 settings:
-  loop_rate: 5000
+  loop_rate: 3000
 agents:
   - name: "Bob"
     position: "Athens"
+#  - name: "Joe"
+#    position: "Athens"
+#  - name: "Clara"
+#    position: "Athens"
 cities:
   - name: "Athens"
     links:
-      - "Brussels"
+      - "Rome"
+      - "Berlin"
     market:
       Grain:
         consumption: 30
-        supply: 35
         production: 25
+        supply: 35
         pricer:
           base_supply: 35
           base_price: 100
           price_per_supply: -1
     pos:
-      - 300
-      - 400
+      - 600
+      - 700
   - name: "Brussels"
     links:
-      - "Athens"
+      - "Rome"
+      - "Berlin"
     market:
       Grain:
         consumption: 25
-        supply: 20
         production: 30
+        supply: 20
         pricer:
           base_supply: 35
           base_price: 100
           price_per_supply: -1
     pos:
       - 200
+      - 300
+  - name: "Rome"
+    links:
+      - "Athens"
+      - "Brussels"
+      - "Berlin"
+    market:
+      Grain:
+        consumption: 27
+        production: 30
+        supply: 20
+        pricer:
+          base_supply: 35
+          base_price: 100
+          price_per_supply: -1
+    pos:
+      - 400
+      - 600
+  - name: "Berlin"
+    links:
+      - "Athens"
+      - "Brussels"
+      - "Rome"
+    market:
+      Grain:
+        consumption: 27
+        production: 35
+        supply: 20
+        pricer:
+          base_supply: 35
+          base_price: 100
+          price_per_supply: -1
+    pos:
+      - 400
       - 300
