--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
+[workspace]
+members = [
+    "lib",
+    "server"
+]
+
 [package]
 name = "trade-sim"
 version = "0.1.0"
@@ -7,16 +13,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.36"
-bevy = "0.5.0"
-derive_more = "0.99.11"
-rand = { version = "0.8.0", features = ["small_rng"] }
-serde = "1.0.118"
-serde_yaml = "0.8.14"
+anyhow = "1.0.40"
+bevy = { version = "0.5.0", features = ["dynamic"] }
+derive_more = "0.99.14"
+rand = { version = "0.8.3", features = ["small_rng"] }
+serde = "1.0.126"
+serde_yaml = "0.8.17"
 structopt = "0.3.21"
-warp = "0.3.0"
-serde_json = "1.0.61"
+warp = "0.3.1"
+serde_json = "1.0.64"
+tokio = { version = "1.6.0", features = ["full"] }
 
-[dependencies.tokio]
-version = "1.0.2"
-features = ["full"]
+lib = { path = "./lib" }
+server = { path = "./server" }
+
