--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
-    "lib",
-    "server"
+    "types",
+    "server",
+    "sim",
 ]
 
 [package]
@@ -24,6 +25,7 @@ warp = "0.3.1"
 serde_json = "1.0.64"
 tokio = { version = "1.6.0", features = ["full"] }
 
-lib = { path = "./lib" }
+types = { path = "./types" }
+sim = { path = "./sim" }
 server = { path = "./server" }
 
