--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,5 +15,5 @@ structopt = "0.3.21"
 warp = "0.3.0"
 serde_json = "1.0.61"
 tokio = { version = "1.0.2", features = ["full"] }
-lib = { path = "../lib" }
+types = { path = "../types" }
 tracing = "0.1"
