--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.dev.package."*"]
+opt-level = 1
+
 [dependencies]
 anyhow = "1.0.40"
 bevy = { version = "0.5.0", features = ["dynamic"] }
@@ -29,4 +32,5 @@ types = { path = "./types" }
 sim = { path = "./sim" }
 server = { path = "./server" }
 ustr = "0.8.0"
+futures-util = "0.3.16"
 
