--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,3 +17,6 @@ serde_json = "1.0.61"
 tokio = { version = "1.0.2", features = ["full"] }
 types = { path = "../types" }
 tracing = "0.1"
+futures-util = "0.3.16"
+vec_map = "0.8.2"
+futures = "0.3.16"
