--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -29,6 +29,7 @@
     "react-konva": "^16.13.0-6"
   },
   "devDependencies": {
+    "@parcel/validator-typescript": "^2.0.0-beta.3.1",
     "parcel": "^2.0.0-beta.3.1",
     "typescript": "^4.1.3"
   }
