--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[profile.dev.package."*"]
-opt-level = 1
+#[profile.dev.package."*"]
+#opt-level = 1
 
 [dependencies]
+types = { path = "./types" }
+sim = { path = "./sim" }
+server = { path = "./server" }
+
 anyhow = "1.0.40"
 bevy = { version = "0.5.0", features = ["dynamic"] }
 derive_more = "0.99.14"
@@ -24,13 +28,8 @@ rand = { version = "0.8.3", features = ["small_rng"] }
 serde = "1.0.126"
 serde_yaml = "0.8.17"
 structopt = "0.3.21"
-warp = "0.3.1"
 serde_json = "1.0.64"
-tokio = { version = "1.6.0", features = ["full"] }
-
-types = { path = "./types" }
-sim = { path = "./sim" }
-server = { path = "./server" }
 ustr = "0.8.0"
 futures-util = "0.3.16"
+tokio = { version = "1.9.0", features = ["full"] }
 
