--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,7 +12,6 @@ rand = { version = "0.8.0", features = ["small_rng"] }
 serde = "1.0.118"
 serde_yaml = "0.8.14"
 structopt = "0.3.21"
-warp = "0.3.0"
 serde_json = "1.0.61"
 tokio = { version = "1.0.2", features = ["full"] }
 types = { path = "../types" }
@@ -20,3 +19,4 @@ tracing = "0.1"
 futures-util = "0.3.16"
 vec_map = "0.8.2"
 futures = "0.3.16"
+rouille = "3.2"
