remove async closure feature

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -53,6 +53,15 @@ RUN rustup toolchain install beta \
     && rustup default beta \
     && rustup component add rls rust-analysis rust-src 
 
+RUN mkdir /code \
+    && cd code \
+    && git clone https://github.com/JoeHowarth/trade-sim.git \
+    && cd trade-sim \
+    && git checkout docker
+
+RUN cd code/trade-sim \
+    && cargo build
+
     # Create a non-root user to use if preferred - see https://aka.ms/vscode-remote/containers/non-root-user.
 RUN groupadd --gid $USER_GID $USERNAME \
     && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
