--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 anyhow = "1.0.36"
 derive_more = "0.99.11"
 rand = { version = "0.8.0", features = ["small_rng"] }
-serde = "1.0.118"
+serde = { version = "1.0.118", features = ['rc'] }
 serde_json = "1.0.61"
 tokio = { version = "1.0.2", features = ["full"] }
 types = { path = "../types" }
