--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.161",
-    "@types/react": "^16.9.51",
     "axios": "^0.21.1",
     "canvas": "^2.6.1",
     "konva": "^7.1.3",
@@ -31,6 +30,6 @@
   "devDependencies": {
     "@parcel/validator-typescript": "^2.0.0-beta.3.1",
     "parcel": "^2.0.0-beta.3.1",
-    "typescript": "^4.1.3"
+    "typescript": "4.4.4"
   }
 }
