--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.161",
+    "@types/react": "^17.0.35",
     "axios": "^0.21.1",
     "canvas": "^2.6.1",
     "konva": "^7.1.3",
