--- a/testfile.yml
+++ b/testfile.yml
@@ -1,13 +1,16 @@
 settings:
-  loop_rate: 9000
-scenario: 
-  agents:
-    - name: "Bob"
-      position: "Athens"
-  #  - name: "Joe"
-  #    position: "Athens"
-  #  - name: "Clara"
-  #    position: "Athens"
+  loop_rate: 3000
+scenario:
+  random_agents:
+    Uniform:
+      3
+#  agents:
+#    - name: "Bob"
+#      position: "Athens"
+#    - name: "Joe"
+#      position: "Athens"
+#    - name: "Clara"
+#      position: "Athens"
   cities:
     - name: "Athens"
       links:
@@ -16,14 +19,14 @@ scenario:
       market:
         Grain:
           consumption: 30
-          production: 25
+          production: 28
           supply: 35
           pricer:
             base_supply: 35
             base_price: 100
             price_per_supply: -1
       pos:
-        - 600
+        - 1000
         - 700
     - name: "Brussels"
       links:
@@ -31,7 +34,7 @@ scenario:
         - "Berlin"
       market:
         Grain:
-          consumption: 25
+          consumption: 29
           production: 30
           supply: 20
           pricer:
@@ -39,7 +42,7 @@ scenario:
             base_price: 100
             price_per_supply: -1
       pos:
-        - 200
+        - 600
         - 300
     - name: "Rome"
       links:
@@ -48,7 +51,7 @@ scenario:
         - "Berlin"
       market:
         Grain:
-          consumption: 27
+          consumption: 28
           production: 30
           supply: 20
           pricer:
@@ -56,8 +59,8 @@ scenario:
             base_price: 100
             price_per_supply: -1
       pos:
-        - 400
-        - 600
+        - 800
+        - 750
     - name: "Berlin"
       links:
         - "Athens"
@@ -65,7 +68,7 @@ scenario:
         - "Rome"
       market:
         Grain:
-          consumption: 27
+          consumption: 34
           production: 35
           supply: 20
           pricer:
@@ -73,5 +76,5 @@ scenario:
             base_price: 100
             price_per_supply: -1
       pos:
-        - 400
+        - 850
         - 300
