--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.35",
     "axios": "^0.21.1",
     "canvas": "^2.6.1",
+    "formik": "^2.2.9",
     "konva": "^7.1.3",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
