--- a/sim/Cargo.toml
+++ b/sim/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.5.0", features = ["dynamic"] }
+bevy = { version = "0.6.1" }
 anyhow = "1.0.40"
 derive_more = "0.99.14"
 serde = "1.0.126"
