--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@parcel/validator-typescript": "^2.0.0-beta.3.1",
     "parcel": "^2.0.0-beta.3.1",
+    "process": "^0.11.10",
     "typescript": "4.4.4"
   }
 }
