--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,6 @@ opt-level = 3
 types = { path = "./types" }
 sim = { path = "./sim" }
 server = { path = "./server" }
-
 anyhow = "1.0.40"
 bevy = { version = "0.6.1" }
 derive_more = "0.99.14"
@@ -33,4 +32,8 @@ serde_json = "1.0.64"
 ustr = "0.8.0"
 futures-util = "0.3.16"
 tokio = { version = "1.9.0", features = ["full"] }
-
+bytes = "1"
+prost = "0.11"
+# Only necessary if using Protobuf well-known types:
+prost-types = "0.11"
+prost-derive = "0.11"
