--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -11,29 +11,48 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@bufbuild/connect-web": "^0.1.0",
     "@bufbuild/protobuf": "^0.0.10",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@storybook/addon-console": "^1.2.3",
+    "@tanstack/react-table": "^8.5.13",
     "@types/lodash": "^4.14.161",
     "@types/react": "^17.0.35",
     "axios": "^0.21.1",
+    "bulma": ">=0.9.2",
     "canvas": "^2.6.1",
     "formik": "^2.2.9",
     "konva": "^7.1.3",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
-    "react-bulma-components": "^3.4.0",
+    "react-bulma-components": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-konva": "^16.13.0-6"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.0",
     "@bufbuild/protoc-gen-connect-web": "^0.1.0",
     "@bufbuild/protoc-gen-es": "^0.0.10",
     "@parcel/validator-typescript": "^2.0.0-beta.3.1",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack4": "^6.5.12",
+    "@storybook/manager-webpack4": "^6.5.12",
+    "@storybook/react": "^6.5.12",
+    "@storybook/testing-library": "^0.0.13",
+    "babel-loader": "^8.2.5",
     "parcel": "^2.0.0-beta.3.1",
     "process": "^0.11.10",
     "typescript": "4.4.4"
