--- a/trade-flow-frontend/tsconfig.json
+++ b/trade-flow-frontend/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     // "baseUrl": "./src",
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "target": "ES2020",
     // "paths": {
