--- a/trade-flow-frontend/package.json
+++ b/trade-flow-frontend/package.json
@@ -27,17 +27,17 @@
     "@storybook/addon-console": "^1.2.3",
     "@tanstack/react-table": "^8.5.13",
     "@types/lodash": "^4.14.161",
-    "@types/react": "^17.0.35",
     "axios": "^0.21.1",
     "bulma": ">=0.9.2",
     "canvas": "^2.6.1",
     "formik": "^2.2.9",
     "konva": "^7.1.3",
     "lodash": "^4.17.20",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-bulma-components": "^4.1.0",
-    "react-dom": "^16.13.1",
-    "react-konva": "^16.13.0-6"
+    "react-dom": "^18.2.0",
+    "react-konva": "^18.2.3",
+    "react-konva-utils": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
